# mkdocs-embed-external-markdown

./: README.md  pyproject.toml
external_markdown/: plugin.py
